# rust-weather-app

./: .gitignore  Cargo.toml  README.md  build.sh  config.toml
backend/: Cargo.toml  Shuttle.toml
backend/.cargo/: config.toml
backend/.sqlx/: query-594fd53122150bb3bac69f28039639370155236d78d01fc217cd212214f3591e.json  query-7776bc44089b79107e855def69d5126ef68167de9ece8302243f18650038dabe.json
backend/migrations/: 20241025000000_create_weather_requests.sql
backend/src/: main.rs
backend/src/db/: mod.rs  models.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs  styles.rs  utils.rs
frontend/src/components/: air_quality.rs  error_display.rs  mod.rs  search_form.rs  weather_display.rs  weather_metrics.rs
shared/: Cargo.toml
shared/src/: lib.rs
